[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/FireSpread.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]

[node name="FireSpread" type="Area" groups=[
"Fire",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.167094, 0, 0, 0 )
collision_layer = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="SpreadTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Position3D" type="Position3D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_FireSpread_area_entered"]
[connection signal="timeout" from="SpreadTimer" to="." method="_on_Timer_timeout"]
